out of alignment issue

--- a/public/layout.css
+++ b/public/layout.css
@@ -73,7 +73,7 @@ input[type=text], select {
     height: 50px;
 
     padding: 5px 20px;
-    margin: 15px 0px 0px 200px;
+    margin: 12px 0px 0px 12px;
 
     border: 3px solid #ac5358;
     border-radius: 8px;
